--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </header>
 
         <!-- styled featured image -->
-        <div class="hero"></div>
+        <div class="hero" title="Four people having digital marketing meeting"></div>
 
-        <!-- Main/ Services content -->
+        <!-- main/ services content -->
         <div class="content">
-            <section class="search-engine-optimization">
+            <section id="search-engine-optimization">
                 <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="Sketch book with a drawing about SEO" />
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -42,7 +42,7 @@
                 </p>
             </section>
 
-            <section id="online-reputation-management" class="online-reputation-management">
+            <section id="online-reputation-management">
                 <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="A person looking at a laptop screen displaying a bar graph titled Reputation" />
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -50,7 +50,7 @@
                 </p>
             </section>
 
-            <section id="social-media-marketing" class="social-media-marketing">
+            <section id="social-media-marketing">
                 <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="A group of people disscusing social media marketing" />
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -63,7 +63,7 @@
         <aside class="benefits">
             <section class="benefit-lead">
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="" />
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
@@ -71,7 +71,7 @@
             
             <section class="benefit-brand">
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="" />
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
@@ -79,7 +79,7 @@
 
             <section class="benefit-cost">
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" />
+                <img src="./assets/images/cost-management.png" alt="" />
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
