--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </section>
 
             <section id="social-media-marketing">
-                <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="A group of people disscusing social media marketing" />
+                <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="A group of people disscusing about social media marketing" />
                 <h2>Social Media Marketing</h2>
                 <p>
                  Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -90,7 +90,7 @@
         <footer>
             <h2>Made with ❤️️ by Horiseon</h2>
             <p>
-                &copy; 2019 Horiseon Social Solution Services, Inc.
+              &copy; 2019 Horiseon Social Solution Services, Inc.
             </p>
         </footer>
     </body>
