--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <!-- featured image -->
         <section class="hero">
-            <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four people having digital marketing meeting">
+            <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four people having digital marketing meeting" />
         </section>
 
         <!-- services content -->
