Revert the HTML and CSS code to the previous version

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- header and navigation -->
         <header>
             <h1>
-                <a href="index.html">Hori<span>seo</span>n</a>
+                <a href="index.html">Hori<span id="seo">seo</span>n</a>
             </h1>
 
             <nav>
@@ -29,12 +29,10 @@
             </nav>
         </header>
 
-        <!-- featured image -->
-        <section class="hero">
-            <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four people having digital marketing meeting" />
-        </section>
+        <!-- styled featured image -->
+        <div class="hero" title="Four people having digital marketing meeting"></div>
 
-        <!-- services content -->
+        <!-- main/ services content -->
         <div class="content">
             <section id="search-engine-optimization">
                 <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="Sketch book with a drawing about SEO" />
