--- a/index.html
+++ b/index.html
@@ -29,62 +29,67 @@
             </nav>
         </header>
 
-        <!-- styled featured image -->
-        <div class="hero" title="Four people having digital marketing meeting"></div>
-
-        <!-- main/ services content -->
-        <div class="content">
-            <section id="search-engine-optimization">
-                <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="Sketch book with a drawing about SEO" />
-                <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-                </p>
+        <main>
+            <!-- featured image content -->
+            <section class="hero">  
+            <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four people having digital marketing meeting" />
             </section>
 
-            <section id="online-reputation-management">
-                <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="A person looking at a laptop screen displaying a bar graph titled Reputation" />
-                <h2>Online Reputation Management</h2>
-                <p>
-                   The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-                </p>
-            </section>
-
-            <section id="social-media-marketing">
-                <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="A group of people disscusing about social media marketing" />
-                <h2>Social Media Marketing</h2>
-                <p>
-                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-                </p>
-            </section>
-        </div>
-
-        <!-- side bar content -->
-        <aside class="benefits">
-            <section class="benefit-lead">
-                <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" alt="" />
-                <p>
-                    Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
-                </p>
-            </section>  
+             <!-- services content -->
+            <section class="content">
+                <article id="search-engine-optimization" class="content-article">
+                    <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="Sketch book with a drawing about SEO" />
+                    <h2>Search Engine Optimization</h2>
+                    <p>
+                        The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                    </p>
+                </article>
             
-            <section class="benefit-brand">
-                <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" alt="" />
-                <p>
-                    Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-                </p>
-            </section>
 
-            <section class="benefit-cost">
-                <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png" alt="" />
-                <p>
-                    As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-                </p>
-            </section>
-        </aside>
+                <article id="online-reputation-management" class="content-article">
+                    <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="A person looking at a laptop screen displaying a bar graph titled Reputation" />
+                    <h2>Online Reputation Management</h2>
+                    <p>
+                        The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                    </p>
+                </article>
+
+                <article id="social-media-marketing" class="content-article">
+                    <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="A group of people disscusing about social media marketing" />
+                    <h2>Social Media Marketing</h2>
+                    <p>
+                        Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                    </p>
+                </article>
+            </section>        
+
+            <!-- side bar content -->
+            <aside class="benefits">
+                <article class="benefits-article">
+                    <h3>Lead Generation</h3>
+                    <img src="./assets/images/lead-generation.png" alt="" />
+                    <p>
+                        Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                    </p>
+                </article>  
+            
+                <article class="benefits-article">
+                    <h3>Brand Awareness</h3>
+                    <img src="./assets/images/brand-awareness.png" alt="" />
+                    <p>
+                        Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                    </p>
+                </article>
+
+                <article class="benefits-article">
+                    <h3>Cost Management</h3>
+                    <img src="./assets/images/cost-management.png" alt="" />
+                    <p>
+                        As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                    </p>
+                </article>
+            </aside> 
+        </main>       
 
         <!-- Footer content -->
         <footer>
